@@ -1,5 +1,8 @@
 2005-08-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/beam.cc (rest_collision_callback): call position_beam() if
+	necessary.
+
 	* input/regression/spacing-uniform-stretching.ly: new file.
 
 	* lily/spacing-loose-columns.cc (set_loose_columns): use robust_relative_extent().
